@@ -1,5 +1,6 @@
 v1.3.5 (2018.10.xx)
   - Update SQLite database engine to version 3.25.2
+  - Automatically delete and recreate the PVR database if any exceptions occur opening it during startup
 
 v1.3.4 (2018.09.21)
   - Update SQLite database engine to version 3.25.1
